@@ -8,7 +8,7 @@ AUTOMAKE_OPTIONS=foreign
 noinst_HEADERS = version.h nocc.h support.h origin.h platform.h opts.h fcnlib.h keywords.h langdef.h \
 			pnode.h lexer.h tnode.h treecheck.h symbols.h xml.h names.h occampi.h mcsp.h \
 			library.h treeops.h langops.h langdeflookup.h lexpriv.h scope.h parser.h parsepriv.h \
-			dfa.h dfaerror.h prescope.h typecheck.h constprop.h precheck.h \
+			dfa.h dfaerror.h prescope.h typecheck.h constprop.h constraint.h precheck.h \
 			aliascheck.h usagecheck.h defcheck.h postcheck.h map.h allocate.h \
 			target.h codegen.h krocetc.h transputer.h extn.h fetrans.h betrans.h \
 			feunit.h occampi_fe.h crypto.h mcsp_fe.h \
