@@ -8,8 +8,8 @@ AUTOMAKE_OPTIONS=foreign
 
 INCLUDES=-I@srcdir@/../include
 
-liblang_a_SOURCES=tnode.c names.c feunit.c prescope.c scope.c typecheck.c langops.c langdef.c constprop.c precheck.c \
-		aliascheck.c usagecheck.c library.c defcheck.c postcheck.c fetrans.c
+liblang_a_SOURCES=tnode.c names.c feunit.c prescope.c scope.c typecheck.c langops.c langdef.c constprop.c constraint.c \
+		precheck.c aliascheck.c usagecheck.c library.c defcheck.c postcheck.c fetrans.c
 
 CFLAGS=@CFLAGS@ @EXTRA_CFLAGS@
 
