@@ -1,0 +1,69 @@
+/*
+ *	constraint.c -- constraint handling for NOCC
+ *	Copyright (C) 2007 Fred Barnes <frmb@kent.ac.uk>
+ *
+ *	This program is free software; you can redistribute it and/or modify
+ *	it under the terms of the GNU General Public License as published by
+ *	the Free Software Foundation; either version 2 of the License, or
+ *	(at your option) any later version.
+ *
+ *	This program is distributed in the hope that it will be useful,
+ *	but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *	GNU General Public License for more details.
+ *
+ *	You should have received a copy of the GNU General Public License
+ *	along with this program; if not, write to the Free Software
+ *	Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301 USA
+ */
+
+/*{{{  includes*/
+#ifdef HAVE_CONFIG_H
+#include "config.h"
+#endif
+
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <unistd.h>
+#include <stdarg.h>
+#include <sys/types.h>
+
+#include "nocc.h"
+#include "support.h"
+#include "version.h"
+#include "symbols.h"
+#include "keywords.h"
+#include "lexer.h"
+#include "lexpriv.h"
+#include "tnode.h"
+#include "parser.h"
+#include "parsepriv.h"
+#include "names.h"
+#include "langops.h"
+#include "constraint.h"
+
+/*}}}*/
+
+
+/*{{{  int constraint_init (void)*/
+/*
+ *	called to initialise constraint handling
+ *	returns 0 on success, non-zero on failure
+ */
+int constraint_init (void)
+{
+	return 0;
+}
+/*}}}*/
+/*{{{  int constraint_shutdown (void)*/
+/*
+ *	called to shut-down constraint handling
+ *	returns 0 on success, non-zero on failure
+ */
+int constraint_shutdown (void)
+{
+	return 0;
+}
+/*}}}*/
+
